.provarCaches/00D5f000005vwGkEAI/objects/rstk__suplocitem__c.object
<CustomObject>
    <description>suplocitem__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>LEFT(rstk__suplocitem_supitem__r.rstk__supitem_item__c +&quot;-&quot;+ rstk__suplocitem_lotno__c, 80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__suplocitem_condition__c</fullName>
        <label>Condition</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__suplocitem_expdate__c</fullName>
        <label>Lot Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__suplocitem_location__c</fullName>
        <label>Stock Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__suplocitem_locfreeqty__c</fullName>
        <label>Location Quantity OH</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__suplocitem_locqty__c</fullName>
        <label>Location Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__suplocitem_lotno__c</fullName>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__suplocitem_quarref__c</fullName>
        <label>Quar Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__suplocitem_supitem__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Part Number</label>
        <referenceTo>rstk__supitem__c</referenceTo>
        <relationshipLabel>Supplier Inventory Location Details</relationshipLabel>
        <relationshipName>suplocitems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Supplier Inventory Location Detail</label>
    <listViews>
        <fullName>rstk__Supplier_Inventory_Location</fullName>
        <columns>NAME</columns>
        <columns>rstk__suplocitem_supitem__c</columns>
        <columns>rstk__suplocitem_lotno__c</columns>
        <columns>rstk__suplocitem_location__c</columns>
        <columns>rstk__suplocitem_locqty__c</columns>
        <columns>rstk__suplocitem_locfreeqty__c</columns>
        <columns>rstk__suplocitem_expdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Supplier Inventory Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Inventory Location Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>